# skillhealth

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  dist-workspace.toml  llms.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml
claude-skill/skillhealth/: SKILL.md
crates/skillhealth/: Cargo.toml
crates/skillhealth-core/: Cargo.toml
crates/skillhealth-core/src/: cache.rs  claude_md.rs  discover.rs  doctor.rs  graph.rs  history.rs  lib.rs  model.rs  parse.rs  report.rs  settings.rs  usage.rs  view.rs
crates/skillhealth/assets/: dashboard.html
crates/skillhealth/src/: cli.rs  main.rs  scan.rs
crates/skillhealth/src/render/: detail.rs  doctor_view.rs  html.rs  json.rs  markdown.rs  mod.rs  terminal.rs
crates/skillhealth/src/render/snapshots/: skillhealth__render__terminal__tests__overview_snapshot_plain.snap
crates/skillhealth/src/tui/: actions.rs  app.rs  debounce.rs  event.rs  fixtures.rs  mod.rs  theme.rs  ui.rs  watch.rs
crates/skillhealth/src/tui/views/: doctor.rs  help.rs  mod.rs  overview.rs
crates/skillhealth/tests/: e2e.rs  tui_pty.rs
crates/skillhealth/tests/fixtures/config/: CLAUDE.md  history.jsonl
crates/skillhealth/tests/fixtures/config/plugins/cache/mp/superpowers/5.1.0/skills/writing-plans/: SKILL.md
crates/skillhealth/tests/fixtures/config/skills/cfo/: SKILL.md
crates/skillhealth/tests/fixtures/config/skills/leftover-debris/: notes.txt
crates/skillhealth/tests/fixtures/config/skills/old-experiment/: SKILL.md
crates/skillhealth/tests/fixtures/projects/proj-a/: session1.jsonl
docs/demo/: demo-tui.tape  demo.tape  env.sh  setup-demo.sh  tui-visual-check.tape
